Add missing translation keys for Chinese place tags
- Add missing Chinese place tag translations to all locale files:
  - WiFi快, 海滩附近, 河景, 高端设施, 历史建筑, 优雅环境, 价格实惠, 清迈
  - These tags were being used in place data but missing from translation files

- Add missing common.goSee translation key to English locale:
  - Used in HomeLocalNomads component for 'Go See' button

- Technical improvements:
  - Ensure all place tags have consistent translations across all languages
  - Maintain backward compatibility with existing tag keys
  - Support both English key format and Chinese direct format

- Translation coverage:
  - English: Added English translations for Chinese tags
  - Chinese: Added direct Chinese tag mappings
  - Japanese: Added Japanese translations for Chinese tags

This resolves translation key warnings for place recommendation tags
and ensures consistent multilingual support for all place data.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -315,7 +315,8 @@
     "loadingLocationData": "Loading location data...",
     "loadingCities": "Loading cities...",
     "loading": "Loading...",
-    "home": "Home"
+    "home": "Home",
+    "goSee": "Go See"
   },
   "voteSystem": {
     "voteFailed": "Vote submission failed, please try again",
@@ -1639,7 +1640,15 @@
         "culturalExperience": "Cultural Experience",
         "freeVisit": "Free Visit",
         "influencerSpot": "Influencer Spot",
-        "communityActivities": "Community Activities"
+        "communityActivities": "Community Activities",
+        "WiFi快": "Fast WiFi",
+        "海滩附近": "Near Beach",
+        "河景": "River View",
+        "高端设施": "Premium Facilities",
+        "历史建筑": "Historical Building",
+        "优雅环境": "Elegant Environment",
+        "价格实惠": "Affordable Price",
+        "清迈": "Chiang Mai"
       },
       "submitButton": "Submit Recommendation",
       "title": "Recommend a Place"
