--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2085,7 +2085,15 @@
         "culturalExperience": "文化体験",
         "freeVisit": "無料見学",
         "influencerSpot": "インフルエンサースポット",
-        "communityActivities": "コミュニティ活動"
+        "communityActivities": "コミュニティ活動",
+        "WiFi快": "WiFi速い",
+        "海滩附近": "ビーチ近く",
+        "河景": "川の景色",
+        "高端设施": "高級施設",
+        "历史建筑": "歴史的建物",
+        "优雅环境": "優雅な環境",
+        "价格实惠": "手頃な価格",
+        "清迈": "チェンマイ"
       },
       "submitButton": "おすすめを送信",
       "title": "場所をおすすめ"
