--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -2485,7 +2485,15 @@
         "culturalExperience": "文化体验",
         "freeVisit": "免费参观",
         "influencerSpot": "网红店",
-        "communityActivities": "社区活动"
+        "communityActivities": "社区活动",
+        "WiFi快": "WiFi快",
+        "海滩附近": "海滩附近",
+        "河景": "河景",
+        "高端设施": "高端设施",
+        "历史建筑": "历史建筑",
+        "优雅环境": "优雅环境",
+        "价格实惠": "价格实惠",
+        "清迈": "清迈"
       },
       "submitButton": "提交推荐",
       "title": "推荐地点"
