Add missing tax step translations for Japanese and Spanish
- Add missing tax step translations to Japanese locale:
  - step2: 2️⃣ 税金計算機 (Tax Calculator)
  - step3: 3️⃣ 戦略ガイド (Strategy Guide)
  - step4: 4️⃣ 国別比較 (Country Comparison)
  - step5: 5️⃣ 期限リマインダー (Deadline Reminder)

- Add missing tax step translations to Spanish locale:
  - currentStep: Paso Actual: (Current Step:)
  - step1: 1️⃣ Evaluación de Necesidades (Needs Assessment)
  - step2: 2️⃣ Calculadora Fiscal (Tax Calculator)
  - step3: 3️⃣ Guía de Estrategias (Strategy Guide)
  - step4: 4️⃣ Comparación de Países (Country Comparison)
  - step5: 5️⃣ Recordatorio de Fechas Límite (Deadline Reminder)
  - deadlines tab: Recordatorio de Fechas Límite (Deadline Reminder)

- Technical improvements:
  - Ensure consistent tax step navigation across all languages
  - Maintain proper step numbering and emoji consistency
  - Support complete tax module navigation flow

- Translation coverage:
  - Japanese: Complete tax step translations with proper Japanese terminology
  - Spanish: Complete tax step translations with proper Spanish terminology
  - All languages now have consistent tax module navigation

This resolves translation key warnings for tax.step4 and other tax step keys
in Japanese and Spanish locales, ensuring smooth navigation experience.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2866,8 +2866,15 @@
       "assessment": "Evaluación de Necesidades",
       "calculator": "Calculadora Fiscal",
       "strategies": "Guía de Estrategias",
-      "countries": "Comparación de Países"
+      "countries": "Comparación de Países",
+      "deadlines": "Recordatorio de Fechas Límite"
     },
+    "currentStep": "Paso Actual:",
+    "step1": "1️⃣ Evaluación de Necesidades",
+    "step2": "2️⃣ Calculadora Fiscal",
+    "step3": "3️⃣ Guía de Estrategias",
+    "step4": "4️⃣ Comparación de Países",
+    "step5": "5️⃣ Recordatorio de Fechas Límite",
     "searchPlaceholder": "Buscar países o tipos de impuestos...",
     "categories": {
       "taxHaven": "Paraíso Fiscal",
