--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -620,6 +620,15 @@
     "addCitySuccess": "Ciudad recomendada exitosamente: {cityName}",
     "citiesFound": "Ciudades Encontradas",
     "rateCity": "Calificar Ciudad",
+    "loginToRate": "Por favor inicia sesión para calificar ciudades",
+    "loginToFavorite": "Por favor inicia sesión para agregar favoritos",
+    "addedToFavorites": "Agregado a favoritos",
+    "removedFromFavorites": "Eliminado de favoritos",
+    "overallRating": "Calificación General",
+    "comment": "Comentario",
+    "shareYourExperience": "Comparte tu experiencia en esta ciudad...",
+    "ratingSubmitted": "Calificación enviada exitosamente",
+    "submitRating": "Enviar Calificación",
     "viewAllCities": "Ver Todas las Ciudades",
     "addCityError": "Error al agregar ciudad, por favor intenta de nuevo",
     "cityList": "Lista de Ciudades",
