--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -255,6 +255,15 @@
     "mediumVisa": "中期签证",
     "longVisa": "长期签证",
     "rateCity": "评价城市",
+    "loginToRate": "请登录后评价城市",
+    "loginToFavorite": "请登录后添加收藏",
+    "addedToFavorites": "已添加到收藏",
+    "removedFromFavorites": "已从收藏中移除",
+    "overallRating": "综合评分",
+    "comment": "评论",
+    "shareYourExperience": "分享您在这个城市的体验...",
+    "ratingSubmitted": "评价提交成功",
+    "submitRating": "提交评价",
     "addToFavorites": "添加到收藏",
     "viewDetails": "查看详情",
     "shareCity": "分享城市",
