--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -971,6 +971,7 @@
 
   "places": {
     "title": "推荐地点",
+    "subtitle": "发现最适合数字游民的地点",
     "description": "发现最适合数字游民的地点",
     "searchPlaceholder": "搜索地点...",
     "addPlace": "添加地点",
@@ -978,6 +979,93 @@
     "recommendations": "推荐",
     "recommendationScore": "推荐评分",
     "reviews": "评价",
+    "filters": "筛选",
+    "clearAll": "清除全部",
+    "category": "分类",
+    "city": "城市",
+    "allCities": "所有城市",
+    "noiseLevel": "噪音等级",
+    "quiet": "安静",
+    "medium": "中等",
+    "loud": "嘈杂",
+    "hasOutlets": "有插座",
+    "noOutlets": "无插座",
+    "longStay": "长坐",
+    "suitableForWork": "适合办公",
+    "notSuitableForWork": "不适合办公",
+    "socialAtmosphere": "社交氛围",
+    "lowSocial": "低社交",
+    "mediumSocial": "中等社交",
+    "highSocial": "高社交",
+    "sortByRecommendation": "按推荐分排序",
+    "sortByRating": "按评分排序",
+    "sortByWifi": "按WiFi排序",
+    "sortByPrice": "按价格排序",
+    "sortByRecent": "按时间排序",
+    "showingResults": "显示 {count} / {total} 个地点",
+    "sortedByRecommendation": "按推荐分排序",
+    "rating": "评分",
+    "wifi": "WiFi",
+    "price": "价格",
+    "workFriendly": "办公友好",
+    "loginToFavorite": "请登录后添加收藏",
+    "addedToFavorites": "已添加到收藏",
+    "removedFromFavorites": "已从收藏中移除",
+    "form": {
+      "title": "添加新地点",
+      "subtitle": "与社区分享您最喜欢的数字游民地点",
+      "step1": "基本信息",
+      "step1Desc": "名称和位置",
+      "step2": "WiFi和价格",
+      "step2Desc": "关键信息",
+      "step3": "环境",
+      "step3Desc": "氛围和设施",
+      "step4": "描述",
+      "step4Desc": "告诉我们您为什么喜欢它",
+      "step5": "照片",
+      "step5Desc": "展示这个地方",
+      "basicInfo": "基本信息",
+      "placeName": "地点名称",
+      "placeNamePlaceholder": "例如：蓝瓶咖啡",
+      "category": "分类",
+      "selectCategory": "选择分类",
+      "address": "地址",
+      "addressPlaceholder": "完整地址",
+      "city": "城市",
+      "cityPlaceholder": "城市名称",
+      "checking": "检查中...",
+      "checkDuplicates": "检查重复",
+      "similarPlacesFound": "发现相似地点：",
+      "similarity": "相似度",
+      "wifiAndPrice": "WiFi速度和价格等级",
+      "wifiSpeed": "WiFi速度 (Mbps)",
+      "wifiSpeedHelp": "测试您的WiFi速度并输入结果",
+      "priceLevel": "价格等级",
+      "priceLevelHelp": "这个地方有多贵？",
+      "environment": "环境和设施",
+      "noiseLevel": "噪音等级",
+      "socialAtmosphere": "社交氛围",
+      "hasOutlets": "有电源插座",
+      "suitableForLongStay": "适合长时间工作",
+      "descriptionAndTags": "描述和标签",
+      "description": "描述",
+      "descriptionPlaceholder": "描述这个地方、氛围以及它的特别之处...",
+      "recommendationReason": "您为什么推荐这个地方？",
+      "recommendationReasonPlaceholder": "这个地方对数字游民有什么好处？",
+      "tags": "标签",
+      "images": "照片",
+      "uploadImages": "上传照片",
+      "clickToUpload": "点击上传照片",
+      "imageRequirements": "最多3张照片，JPG/PNG格式，每张小于5MB",
+      "uploadedImages": "已上传照片",
+      "previous": "上一步",
+      "next": "下一步",
+      "cancel": "取消",
+      "submit": "提交推荐",
+      "submitting": "提交中...",
+      "loginRequired": "请登录后添加地点",
+      "submitError": "提交推荐失败，请重试。"
+    },
     "notFound": {
       "title": "地点未找到",
       "backToList": "返回地点列表"
