Complete /tax page internationalization: Tax Strategy Guide
🎯 Fixed Missing Translation Keys:

1. **Tax Strategy Guide Component**
   - Replaced all hardcoded Chinese strings with translation keys
   - Fixed strategy titles: '公司结构优化', '数字游民签证', '税收协定优化'
   - Internationalized difficulty levels: '简单', '中等', '困难'
   - Fixed category labels: '税务天堂', '领土税制', '公司结构', '签证策略', '税收协定'

2. **Strategy Details Section**
   - Expected savings: '预期节省' → t('tax.strategyGuide.expectedSavings')
   - Implementation time: '实施时间' → t('tax.strategyGuide.implementationTime')
   - Risk level: '风险等级' → t('tax.strategyGuide.riskLevel')
   - Last updated: '更新时间' → t('tax.strategyGuide.lastUpdated')
   - Related countries: '相关国家' → t('tax.strategyGuide.relatedCountries')

3. **Professional Advisor Service**
   - Service title: '专业顾问服务' → t('tax.strategyGuide.professionalAdvisorService')
   - Service description: '此策略有专业顾问提供服务' → t('tax.strategyGuide.advisorServiceDescription')
   - Fee label: '费用' → t('tax.strategyGuide.fee')
   - View advisors: '查看顾问' → t('tax.strategyGuide.viewAdvisors')

4. **Advisor Management**
   - Advisor list title: '专业税务顾问' → t('tax.strategyGuide.professionalTaxAdvisors')
   - Availability status: '可咨询', '忙碌', '不可用' → t('tax.strategyGuide.availability.*')
   - Specialization: '专业领域' → t('tax.strategyGuide.specialization')
   - Languages: '语言' → t('tax.strategyGuide.languages')
   - Contact actions: '联系', '详情' → t('tax.strategyGuide.contact'), t('tax.strategyGuide.details')

5. **Advisor Contact Actions**
   - Send email: '发送邮件' → t('tax.strategyGuide.sendEmail')
   - Phone consultation: '电话咨询' → t('tax.strategyGuide.phoneConsultation')
   - Visit website: '访问网站' → t('tax.strategyGuide.visitWebsite')

6. **Risk Level Translations**
   - Low risk: '低' → t('tax.strategyGuide.risk.low')
   - Medium risk: '中' → t('tax.strategyGuide.risk.medium')
   - High risk: '高' → t('tax.strategyGuide.risk.high')

7. **Strategy-Specific Data**
   - Company structure savings: ',000-60,

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1947,7 +1947,47 @@
       },
       "successRate": "Success Rate",
       "hasAdvisor": "Has Advisor",
-      "hideAdvisors": "Hide Advisors"
+      "hideAdvisors": "Hide Advisors",
+      "expectedSavings": "Expected Savings",
+      "implementationTime": "Implementation Time",
+      "riskLevel": "Risk Level",
+      "lastUpdated": "Last Updated",
+      "relatedCountries": "Related Countries",
+      "professionalAdvisorService": "Professional Advisor Service",
+      "advisorServiceDescription": "This strategy has professional advisors available",
+      "fee": "Fee",
+      "professionalTaxAdvisors": "Professional Tax Advisors",
+      "availability": {
+        "available": "Available",
+        "busy": "Busy",
+        "unavailable": "Unavailable"
+      },
+      "specialization": "Specialization",
+      "languages": "Languages",
+      "contact": "Contact",
+      "details": "Details",
+      "sendEmail": "Send Email",
+      "phoneConsultation": "Phone Consultation",
+      "visitWebsite": "Visit Website",
+      "risk": {
+        "low": "Low",
+        "medium": "Medium",
+        "high": "High"
+      },
+      "strategies": {
+        "companyStructure": {
+          "savings": "$20,000-60,000/year",
+          "timeToImplement": "6-12 months"
+        },
+        "digitalNomadVisa": {
+          "savings": "$5,000-20,000/year",
+          "timeToImplement": "2-4 months"
+        },
+        "taxTreatyOptimization": {
+          "savings": "$8,000-25,000/year",
+          "timeToImplement": "3-6 months"
+        }
+      }
     },
     "calculator": {
       "potentialSavings": "Potential Savings",
