Add comprehensive geolocation permission handling and user guidance
🔧 **Geolocation Permission Management System:**

**New Components:**
- Created GeolocationPermissionGuide component with step-by-step instructions
- Enhanced useLocation hook with better permission status tracking
- Integrated permission guide into HomePlaceRecommendations

**Key Features:**

1. **Permission Status Detection**
   - Real-time permission status checking (granted/denied/prompt/unknown)
   - Automatic permission state updates
   - Browser compatibility handling

2. **User-Friendly Error Handling**
   - Clear error messages for different permission states
   - Automatic permission guide display when access is denied
   - Graceful fallback to alternative location methods

3. **Comprehensive User Guidance**
   - Step-by-step instructions for enabling location access
   - Browser-specific instructions (Chrome, Firefox, Safari)
   - Visual status indicators with color coding
   - Alternative options (manual input, IP-based location)

4. **Enhanced UX**
   - Modal-based permission guide with clear actions
   - Retry functionality with permission status refresh
   - Cancel and retry options for user control
   - Responsive design for all screen sizes

**Technical Improvements:**
- Better error handling in geolocation requests
- Permission state persistence and tracking
- Integration with existing notification system
- Multi-language support (English/Chinese)

**Translation Keys Added:**
- geolocation.title, status, denied, browserInstructions
- alternatives, refresh, retry
- Complete English and Chinese translations

**Problem Solved:**
- Addresses 'Geolocation permission has been blocked' error
- Provides clear path for users to reset permissions
- Offers alternative location detection methods
- Improves overall user experience with location features

**Files Modified:**
- src/components/GeolocationPermissionGuide.tsx (new)
- src/hooks/useLocation.ts (enhanced)
- src/components/HomePlaceRecom

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,43 @@
 {
+  "geolocation": {
+    "title": "Location Permission",
+    "status": {
+      "granted": "Permission Granted",
+      "denied": "Permission Denied",
+      "prompt": "Permission Requested",
+      "unknown": "Status Unknown"
+    },
+    "denied": {
+      "title": "Location Access Blocked",
+      "description": "Your browser has blocked location access. Follow these steps to enable it:",
+      "step1": {
+        "title": "Click the lock icon",
+        "description": "Click the lock or shield icon next to the website URL in your browser's address bar"
+      },
+      "step2": {
+        "title": "Allow location access",
+        "description": "Find 'Location' in the permissions list and change it to 'Allow'"
+      },
+      "step3": {
+        "title": "Refresh the page",
+        "description": "Reload this page to try again"
+      }
+    },
+    "browserInstructions": {
+      "title": "Browser-specific Instructions",
+      "chrome": "Click the lock icon → Site settings → Location → Allow",
+      "firefox": "Click the shield icon → Permissions → Location → Allow",
+      "safari": "Safari menu → Preferences → Websites → Location → Allow"
+    },
+    "alternatives": {
+      "title": "Alternative Options",
+      "description": "If you prefer not to share your location, you can:",
+      "manualInput": "📝 Enter location manually",
+      "ipLocation": "🌐 Use approximate location (IP-based)"
+    },
+    "refresh": "Refresh Status",
+    "retry": "Try Again"
+  },
   "liveStats": {
     "activities": {
       "explored": "explored",
