--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -3282,6 +3282,45 @@
     "browseCities": "浏览城市",
     "findNomads": "寻找游民"
   },
+  "geolocation": {
+    "title": "位置权限",
+    "status": {
+      "granted": "权限已授予",
+      "denied": "权限被拒绝",
+      "prompt": "权限请求中",
+      "unknown": "状态未知"
+    },
+    "denied": {
+      "title": "位置访问被阻止",
+      "description": "您的浏览器已阻止位置访问。请按照以下步骤启用：",
+      "step1": {
+        "title": "点击锁定图标",
+        "description": "点击浏览器地址栏中网站URL旁边的锁定或盾牌图标"
+      },
+      "step2": {
+        "title": "允许位置访问",
+        "description": "在权限列表中找到\"位置\"并将其更改为\"允许\""
+      },
+      "step3": {
+        "title": "刷新页面",
+        "description": "重新加载此页面重试"
+      }
+    },
+    "browserInstructions": {
+      "title": "浏览器特定说明",
+      "chrome": "点击锁定图标 → 网站设置 → 位置 → 允许",
+      "firefox": "点击盾牌图标 → 权限 → 位置 → 允许",
+      "safari": "Safari菜单 → 偏好设置 → 网站 → 位置 → 允许"
+    },
+    "alternatives": {
+      "title": "替代选项",
+      "description": "如果您不想分享位置，您可以：",
+      "manualInput": "📝 手动输入位置",
+      "ipLocation": "🌐 使用大概位置（基于IP）"
+    },
+    "refresh": "刷新状态",
+    "retry": "重试"
+  },
   "liveStats": {
     "title": "实时统计",
     "subtitle": "看看我们的社区正在发生什么",
